--- a/bistro/index.html
+++ b/bistro/index.html
@@ -10,7 +10,6 @@ background-color: #faf2e4;
 margin: 0 10%;
 font-family: sans-serif;
 }
-
 h1 {
 text-align: center;
 font-family: serif;
@@ -19,20 +18,29 @@ text-decoration: uppercase;
 border-bottom: 1px solid #57b1dc;
 margin-top: 30px;
 }
-
 h2 {
 color: #d1633c;
 font-size: 1em;
 }
-
 </style>
+
 </head>
 
 <body>
-
 <h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
 
+<nav>
+  <ul>   
+    <li><a href="index.html">Home</a></li>  
+    <li><a href="menu.html">Menu</a></li>   
+    <li><a href="bgnews.html">News</a></li>  
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="jenskitch/jenskitch.html">Jen's Kitchen</a></li>
+  </ul>
+</nav>
+
 <h2> The Restaurant</h2>
+
 <p>The Black Goose Bistro offers causal lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.</p>
 
 <h2>Catering</h2>
