--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -17,6 +17,7 @@
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
     <li><a href="jenskitch/jenskitch.html">Jen's Kitchen</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
   </ul>
 </nav>
 </header><article>  <header>
