--- a/bistro/index.html
+++ b/bistro/index.html
@@ -36,6 +36,7 @@ font-size: 1em;
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
     <li><a href="jenskitch/jenskitch.html">Jen's Kitchen</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
   </ul>
 </nav>
 
