--- a/bistro/gallery.html
+++ b/bistro/gallery.html
@@ -34,23 +34,23 @@ p {
     <li><a href="menu.html">Menu</a></li>   
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="jenskitch/jenskitch.html">Jen's Kitchen</a></li>
+    <li><a href="jenskitch.html">Jen's Kitchen</a></li>
   </ul>
 </nav>
 
 
   <h2>Our Baked Goods</h2>
-  <img src="bread-800 copy.jpg">
+  <img src="bread-800 copy.jpg" width="250">
 
   <p>We start our day at the crack of dawn to bake our own muffins, bread, and dinner rolls. Loaves not used that day are donated to the local food shelter.<p>
     
   <h2>Our Burgers</h2>
-  <img src="burgers-800 copy.jpg">
+  <img src="burgers-800 copy.jpg" width="250">
 
   <p>People come from all over to enjoy our lovingly made burgers. We grind our own locally sourced organic beef and turkey so you know it’s fresh and free from fillers and other nonsense.</p>
 
   <h2>Catch of the Day</h2>
-  <img src="fish-800.jpg">
+  <img src="fish-800.jpg" width="250">
 
   <p>Our chef works with local fishermen to pick the freshest the sea has to offer for our daily seafood special. Our Roast Cod Caponata with Roasted Potatoes is an old favorite with our regulars.</p>
 </body>
