--- a/bistro/index.html
+++ b/bistro/index.html
@@ -35,7 +35,7 @@ font-size: 1em;
     <li><a href="menu.html">Menu</a></li>   
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="jenskitch/jenskitch.html">Jen's Kitchen</a></li>
+    <li><a href="jenskitch.html">Jen's Kitchen</a></li>
     <li><a href="gallery.html">Gallery</a></li>
   </ul>
 </nav>
