--- a/bistro/jenskitch.html
+++ b/bistro/jenskitch.html
@@ -19,7 +19,7 @@ small. { color: #999;}
     <li><a href="../menu.html">Menu</a></li>   
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="jenskitch/jenskitch.html">Jen's Kitchen</a></li>
+    <li><a href="jenskitch.html">Jen's Kitchen</a></li>
     <li><a href="gallery.html">Gallery</a></li>
   </ul>
 </nav>
