--- a/bistro/index.html
+++ b/bistro/index.html
@@ -47,6 +47,12 @@ font-size: 1em;
 <h2>Catering</h2>
 <p>You have fun. <em>We'll handle the cooking.</em> Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
 
+<h2> Blackstone Bistro- Pizza on demand</h2>
+<p>Our 12" wood-fired pizzas are available for delivery. Build your custom pizza and we'll deliver it within an hour.</p>
+<a href="pizza.html">
+  <img src="pizza.gif" alt="Pizza Menu" width="250">
+</a>
+
 <h2>Location and Hours</h2>
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm; <br>Friday and Saturday, 11am to midnight</p>
