--- a/bistro/pizza.html
+++ b/bistro/pizza.html
@@ -46,7 +46,9 @@
       <option>4</option>
     </select><br><br>
 
-    <input type="submit" value="Bring me a pizza!">
+    <a href="thankyou.html">
+    <button type="button">Bring me a pizza!</button>
+</a>
     <input type="reset" value="Reset">
   </form>
 
