--- a/bistro/cookingwithdaniel.html
+++ b/bistro/cookingwithdaniel.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cooking with Daniel</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Internal CSS (all in one file) -->
   <style>
