--- a/bistro/jenskitch.html
+++ b/bistro/jenskitch.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
 <title>Jen's Kitchen</title>
+<link rel="stylesheet" href="style.css">
 <style>
 body { margin 2em 5%;    font-family:  Georgia,  "Times New Roman", Times, serif;}
 h1, h2 { color: #399;}h1 { font-size: 1.5em;}
@@ -16,7 +17,7 @@ small. { color: #999;}
 <nav>
   <ul>   
     <li><a href="index.html">Home</a></li>  
-    <li><a href="../menu.html">Menu</a></li>   
+    <li><a href="summermenu-8.html">Menu</a></li>   
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
     <li><a href="gallery.html">Gallery</a></li>
