--- a/bistro/pizza.html
+++ b/bistro/pizza.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Blackstone Bistro | Pizza-On-Demand</title>
+  <title>Blackstone Bistro | Pizza-On-Demand</title>\
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>BLACKSTONE BISTRO | PIZZA-ON-DEMAND</h1>
