--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -4,6 +4,7 @@
 <head>
   <title>The Black Goose Bistro News</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 <nav>
   <ul>   
     <li><a href="index.html">Home</a></li>  
-    <li><a href="menu.html">Menu</a></li>   
+    <li><a href="summermenu-8.html">Menu</a></li>   
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
     <li><a href="jenskitch.html">Jen's Kitchen</a></li>
