--- a/bistro/gallery.html
+++ b/bistro/gallery.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css">
   <title>Bistro Gallery — Text Only</title>
   <style>
     body { 
@@ -31,7 +32,7 @@ p {
 <nav>
   <ul>   
     <li><a href="index.html">Home</a></li>  
-    <li><a href="menu.html">Menu</a></li>   
+    <li><a href="summermenu-8.html">Menu</a></li>   
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
     <li><a href="jenskitch.html">Jen's Kitchen</a></li>
