--- a/bistro/index.html
+++ b/bistro/index.html
@@ -4,6 +4,7 @@
 <head> 
 <meta charset="utf-8">
 <title>Black Goose Bistro</title>
+<link rel="stylesheet" href="style.css">
 <style>
 body {
 background-color: #faf2e4;
@@ -32,7 +33,7 @@ font-size: 1em;
 <nav>
   <ul>   
     <li><a href="index.html">Home</a></li>  
-    <li><a href="menu.html">Menu</a></li>   
+    <li><a href="summermenu-8.html">Menu</a></li>   
     <li><a href="bgnews.html">News</a></li>  
     <li><a href="contact.html">Contact</a></li>
     <li><a href="jenskitch.html">Jen's Kitchen</a></li>
