--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Isabela Rodriguez Resume</title>
+  <link rel="stylesheet" href="style.css"
+</head>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,9 +39,11 @@
 
 
  <h2 style="color:palevioletred;">My Pages</h2>
- <li><a href="jenskitch.html">Jen's Kitchen</a></li>
- <li><a href="index.html">Website</a></li>
-  
+ <a href="file:///Users/isabelarodriguez/Desktop/bistro/jenskitch.html" target="blank">Jen's Kitchen</a>
+ 
+ <a href="https://isabela-66.github.io/fid/bistro/index.html" target="blank">Website</a>
+
+<a href="https://isabela-66.github.io/fid/schedule.html" target="blank">Elite Soccer Academy</a>
 
   <h2 style="color: palevioletred;">About Me</h2>
   <p>
