--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Isabela Rodriguez Resume</title>
-  <link rel="stylesheet" href="style.css"
+  <link rel="stylesheet" href="resume-style.css">
 </head>
 
   <style>
